[package]
name = "web_optimise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
derive = "1.0.0"
image = { version = "0.24.6", features = ["webp-encoder", "png", "avif"] }
json = "0.12.4"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.99"
serde_with = "3.0.0"
tokio = { version = "1.28.2", features = ["full"] }
url = "2.4.0"
